# Self-hosted-CI-CD-platform

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
tests/: test_main.py
